🐛 Fix: Fix a bug in login and create ticket